# ToyPL

./: README.md  ToyPL.cabal  stack.yaml
.github/workflows/: haskell.yml
ToyPL/: README.md  ToyPL.cabal  ToyPL.nix
ToyPL-online/: Main.hs  ToyPL-online.cabal  default.nix  index.html
ToyPL/app/: Main.hs
ToyPL/examples/: p1.tpl  p3.tpl
ToyPL/src/: ToyPL.hs
examples/: p2.tpl  p4.tpl  p5.tpl
haddock/: doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-Q.html  doc-index-R.html  doc-index-T.html  doc-index-U.html  doc-index-V.html  doc-index.html  index.html
haddock/ToyPL-0.1.0.0/: ToyPL-Abs.html  ToyPL-ErrM.html  ToyPL-Eval.html  ToyPL-Lex.html  ToyPL-Par.html  ToyPL-Print.html  ToyPL-Trans.html  ToyPL.haddock  ToyPL.html  ToyPL.txt  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-Q.html  doc-index-R.html  doc-index-T.html  doc-index-U.html  doc-index-V.html  doc-index.html  doc-index.json  index.html
haddock/all/: doc-index-60.html  doc-index-61.html  doc-index-62.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  (+19 more)
src/: Main.hs
(+17 files in other folders)
